@@ -233,9 +233,12 @@ Tk_ImageObjCmd(clientData, interp, objc, objv)
 	     */
 
 	    if ((objc == 3) || (*(arg = Tcl_GetString(objv[3])) == '-')) {
-		dispPtr->imageId++;
-		sprintf(idString, "image%d", dispPtr->imageId);
-		name = idString;
+                Tcl_CmdInfo dummy;
+                do {
+		    dispPtr->imageId++;
+		    sprintf(idString, "image%d", dispPtr->imageId);
+		    name = idString;
+                } while (Tcl_GetCommandInfo(interp, name, &dummy) != 0);
 		firstOption = 3;
 	    } else {
 		TkWindow *topWin;
